--- a/hexoaaa/_config.yml
+++ b/hexoaaa/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 刘有余的博客
-subtitle:
+title: LYY'BLOGS
+subtitle: 一只路过的小码农。。请多关照
 description:
 author: youyu liu
-language:
+language: zh-Hans
 timezone:
 
 # URL
@@ -28,7 +28,8 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+
+new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
@@ -72,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
